Implements Signature validation and tests for GETs

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
         }
     ],
     "autoload": {
-        "files": ["src/SignatureHeader.php", "src/SignatureValidator.php"]
+        "files": [
+            "src/SignatureHeader.php",
+            "src/SignatureValidator.php",
+            "src/AssocArrayString.php"
+            ]
     }
 }
